--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,6 +28,10 @@ body {
     color: var(--primary-text-color);
 }
 
+.alert {
+    background-color: #000;
+}
+
 /* header */
 
 /* main */
@@ -257,6 +261,63 @@ main #albuns .content .img-tb img {
     main #albuns .content .img-tb img {
         width: 250px;
     }
+}
+
+main #discos {
+    min-height: 100vh;
+    padding: 3%;
+}
+
+main #discos .box {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    min-height: 90vh;
+}
+
+main #discos .box h2 {
+    font-size: 2rem;
+    margin-bottom: 20px;
+    border-bottom: solid var(--primary-text-color);
+}
+
+main #discos .box .content {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+main #discos .box .content .grid-discos {
+    width: 90vw;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    align-items: center;
+    justify-items: center;
+    gap: 30px;
+}
+
+main #discos .box .content .grid-discos .disco {
+    display: flex;
+    justify-content: center;
+}
+
+main #discos .box .content .grid-discos .disco a {
+    display: flex;
+    justify-content: center;
+    min-width: none;
+    max-width: 50%;
+}
+
+main #discos .box .content .grid-discos .disco img {
+    width: 100%;
+    border-radius: 10px;
+    border: solid 2px black;
+}
+
+main #discos .box .content .grid-discos .disco img:hover {
+    scale: 1.05;
+    box-shadow: 3px 3px 8px 2px #000;
 }
 
 /* footer */
