--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,6 +21,7 @@
     box-sizing: border-box;
     scroll-behavior: smooth;
     transition: 300ms ease-in-out;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 body {
@@ -33,6 +34,93 @@ body {
 }
 
 /* header */
+
+header {
+    position: fixed;
+    padding: 2%;
+    display: flex;
+    flex-direction: column;
+    width: 20%;
+}
+
+header .material-symbols-outlined {
+    color: var(--primary-text-color);
+    font-weight: bolder;
+    font-size: 2rem;
+    cursor: pointer;
+    width: 2rem;
+}
+
+@media (min-width: 1029px) {
+    header .material-symbols-outlined:hover{
+        font-size: 2.2rem;
+    }
+}
+
+header menu {
+    display: none;
+    padding: 1%;
+    background-color: var(--primary-text-color);
+    box-shadow: 2px 2px 4px 2px black;
+    border-radius: 0.5rem;
+    text-align: center;
+    width: 100%;
+}
+
+header menu .menus {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+header menu .menus a {
+    text-decoration: none;
+    color: var(--primary-bg-color);
+    display: block;
+    width: 100%;
+}
+
+header menu .theme {
+    /* position: absolute; */
+    /* top: 20px; */
+    /* left: 20px; */
+    width: 50px;
+    background-color: var(--primary-text-color);
+    padding: 0.5rem;
+    border-radius: 50%;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+}
+
+
+#dark-theme {
+    font-size: 1.6rem;
+}
+
+#light-theme {
+    font-size: 0;
+}
+
+header menu .menus nav {
+    width: 100%;
+}
+
+header menu .menus nav ul {
+    list-style: none;
+}
+
+header menu .menus nav ul li {
+    border-top: solid 1px var(--primary-bg-color);
+    border-bottom: solid 1px var(--primary-bg-color);
+    padding: 5px;
+    cursor: pointer;
+}
+
+header menu .menus nav ul li:hover {
+    background-color: var(--accent-color);
+}
 
 /* main */
 
@@ -261,10 +349,12 @@ main #albuns .content .img-tb img {
     main #albuns .content .img-tb {
         min-width: 50%;
     }
+
     main #albuns .content .img-tb img {
         width: 400px;
     }
 }
+
 @media (max-width: 450px) {
     main #albuns .content .img-tb img {
         width: 250px;
@@ -344,6 +434,7 @@ main #discos .box .content .grid-discos .disco img:hover {
     main #discos {
         padding: 0;
     }
+
     main #discos .box .content .grid-discos .disco a {
         max-width: 80%;
     }
@@ -353,7 +444,7 @@ main #discos .box .content .grid-discos .disco img:hover {
 /* footer */
 
 footer {
-    background-color: #62626d;
+    background-color: #37373f;
     min-height: 10vh;
     padding: 3%;
 }
@@ -378,9 +469,9 @@ footer .box .direct-aura {
 
 @media (max-width: 1040px) {
     footer .box .direct-aura {
-    flex-direction: column;
-    justify-content: center;
-}
+        flex-direction: column;
+        justify-content: center;
+    }
 }
 
 footer .box .direct-aura p {
@@ -389,14 +480,17 @@ footer .box .direct-aura p {
     text-align: center;
     font-weight: bold;
     font-size: 1.2rem;
+    padding: 10px;
 }
 
 footer .box .direct-aura a {
     width: 20%;
 }
+
 footer .box .direct-aura a img {
     width: 100%;
 }
+
 footer .box .direct-aura a img:hover {
     scale: 1.1;
 }
@@ -408,17 +502,17 @@ footer .box .links {
     gap: 5%;
 }
 
-.dark-mode footer .box .links a{
+.dark-mode footer .box .links a {
     background-color: #62626d;
     border-radius: 10px;
     padding: 1%;
 }
 
-footer .box .links a{
+footer .box .links a {
     width: 15%;
 }
 
-footer .box .links a img{
+footer .box .links a img {
     width: 100%;
 }
 
@@ -438,28 +532,6 @@ footer .box .links a img:hover {
 }
 
 /* others */
-
-.theme {
-    position: fixed;
-    top: 20px;
-    left: 20px;
-    background-color: var(--primary-text-color);
-    padding: 0.5rem;
-    border-radius: 50%;
-    display: flex;
-    flex-direction: column;
-}
-
-.theme a {
-    text-decoration: none;
-}
-
-#dark-theme {
-    font-size: 1.6rem;
-}
-#light-theme {
-    font-size: 0;
-}
 
 #backToTopBtn {
     display: none;
@@ -493,4 +565,32 @@ footer .box .links a img:hover {
 #backToTopBtn:hover {
     background-color: var(--accent-color);
     transform: translateY(-3px);
+}
+
+@media (max-width: 1030px) {
+    main #hero .content .bottom-hero a button:hover {
+        bottom: 0px;
+        box-shadow: 0 0 0 0;
+        cursor: pointer;
+        color: #FFFFFF;
+        font-weight: bold;
+    }
+
+    main #discos .box .content .grid-discos .disco img:hover {
+        scale: 1;
+        box-shadow: 0 0 0 0;
+    }
+
+    footer .box .direct-aura a img:hover {
+        scale: 1;
+    }
+
+    footer .box .links a img:hover {
+        scale: 1;
+    }
+
+    #backToTopBtn:hover {
+        background-color: var(--primary-text-color);
+        transform: translateY(0);
+    }
 }
